# pwr-racing-hare

./: CMakeLists.txt  README.md
Figures/: LineSegment.cpp  LineSegment.h  Point.cpp  Point.h  Triangle.cpp  Triangle.h  main.cpp
GoogleTest/: CMakeLists.txt
GoogleTest/Tests/: basic_tests.cpp
GoogleTest/lib/: CMakeLists.txt
Hare/: AStar.cpp  AStar.h  Field.cpp  Field.h  Node.cpp  Node.h  main.cpp  project.md
InputFiles/TestsInputFiles/: test1.txt  test2.txt
